<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.gsi</groupId>
    <artifactId>chartfx</artifactId>
    <!-- N.B. convention: major version number is linked to the compatible JDK Version, 
        minor version number to library feature/api changes, micro version number to bug-fixes -->
    <version>${revision}${sha1}${changelist}</version>
    <packaging>pom</packaging>
    <name>chartfx</name>
    <description>This charting library ${project.artifactId}- is an extension 
        in the spirit of Oracle's XYChart and performance/time-proven JDataViewer charting functionalities. 
        Emphasis was put on plotting performance for both large number of data points and real-time displays, 
        as well as scientific accuracies leading to error bar/surface plots, and other scientific plotting 
        features (parameter measurements, fitting, multiple axes, zoom, ...). 
        The library also contains a small set of math routines that can operate directly on the DataSet primitive 
        for fitting, computing spectra, linear algebra, FIR/IIR filtering, and other functionalities common to signal processing.
    </description>

    <modules>
        <module>chartfx-acc</module>
        <module>chartfx-chart</module>
        <module>chartfx-dataset</module>
        <module>chartfx-math</module>
        <module>chartfx-samples</module>
    </modules>

    <properties>
        <revision>8.1.0</revision>
        <changelist>-SNAPSHOT</changelist>
        <sha1 />
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <organization>
        <name>GSI Helmholtzzentrum für Schwerionenforschung GmbH</name>
        <url>http://www.gsi.de</url>
    </organization>
    <url>https://github.com/GSI-CS-CO/chart-fx</url>

    <developers>
        <developer>
            <id>hbraeun</id>
            <name>Harald Brauening</name>
            <email>H.Braeuning@gsi.de</email>
            <url>https://www.gsi.de/en/work/project_management_fair/commons/beam_instrumentation.htm</url>
            <timezone>+1</timezone>
            <roles>
                <role>owner</role>
                <role>architect</role>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <id>rstein</id>
            <name>Ralph J. Steinhagen</name>
            <email>R.Steinhagen@gsi.de</email>
            <url>https://fair-wiki.gsi.de/FC2WG</url>
            <timezone>+1</timezone>
            <roles>
                <role>owner</role>
                <role>architect</role>
                <role>developer</role>
            </roles>
        </developer>
        <developer>
            <id>akrimm</id>
            <name>Alexander Krimm</name>
            <email>A.Krimm@gsi.de</email>
            <timezone>+1</timezone>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/GSI-CS-CO/chart-fx.git</connection>
        <developerConnection>scm:git:git@github.com:GSI-CS-CO/chart-fx.git</developerConnection>
        <url>https://github.com/GSI-CS-CO/chart-fx</url>
    </scm>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <!-- put your configurations here -->
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.0.1</version>
                    <configuration>
                        <links>
                            <link>https://docs.oracle.com/javase/8/javafx/api</link>
                        </links>
                    </configuration>
                    <executions>
                        <execution>
                            <id>aggregate</id>
                            <goals>
                                <goal>aggregate</goal>
                            </goals>
                            <phase>site</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <!-- https://stackoverflow.com/questions/3459928/running-a-specific- 
                        maven-plugin-goal-from-the-command-line-in-a-sub-module-of-a/26448447#26448447 -->
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>1.3.2</version>
                    <configuration>
                        <skip>true</skip>
                        <mainClass>de.gsi.chart.samples.RunChartSamples</mainClass>
                        <!-- <mainClass>none</mainClass> -->
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <!-- <configuration> <additionalparam>-Xdoclint:none</additionalparam> 
                    <skip>true</skip> </configuration> -->
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <!-- <configuration> <additionalparam>-Xdoclint:none</additionalparam> 
                            <skip>true</skip> </configuration> -->
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
            </plugin>
            <plugin>
                <groupId>org.eluder.coveralls</groupId>
                <artifactId>coveralls-maven-plugin</artifactId>
                <version>4.3.0</version>
                <configuration>
                    <repoToken>Eqx5NUfvbnGjgztCMWZoLOTm9WAwF5gSk</repoToken>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.0-alpha0</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.0-alpha0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.5.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.5.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <property>
                    <name>release</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
